# proxima

./: .clang-format  .gitignore  README.md  meson.build
extras/: plot_field.py
include/proxima/: grid.hpp  mesh.hpp  proxima.hpp  proxima_decl.hpp  proxima_impl.hpp  simplegrid.hpp
src/: mesh.cpp  meson.build  proxima.cpp
subprojects/: polypartition.wrap
test/: main.cpp  meson.build
